# esopn

./: .env.example  .gitignore  README.md  pyproject.toml
src/esopn/: __init__.py  audio.py  capture.py  commentary.py  config.py  control.py  crowd.py  main.py  orchestrator.py  tts.py  tts_elevenlabs.py  tts_gemini.py  ui.py  vision.py
